--- a/src-assets/scss/_nav.scss
+++ b/src-assets/scss/_nav.scss
@@ -112,7 +112,7 @@
 
     svg {
       display: inline-block;
-      vertical-align: em(-9, 15);
+      vertical-align: em(-8, 15);
       width: em(28, 15);
       height: em(28, 15);
       fill: currentColor;
