--- a/src-assets/scss/_origin.scss
+++ b/src-assets/scss/_origin.scss
@@ -80,6 +80,7 @@ $breakpoint--hero--3 : 800;
 
 $z-index--main     : 1000;
 $z-index--hero     : 1500;
+$z-index--home     : 2000;
 $z-index--header   : 2000;
 $z-index--overlay  : 4000;
 $z-index--nav      : 5000;
